--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/m5.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4 style="color: #fc3535;">Know You Neigborhood</h4>
-              <p>Know You Neigborhood is a website to post a store where the users can view all the stores nearby<br/>
+              <h4 style="color: #fc3535;">Know You Neighbourhood</h4>
+              <p>Know You Neighbourhood is a website to post a store where the users can view all the stores nearby<br/>
                 Technical Skills used:&nbsp;&nbsp;&nbsp;<i class="fa-brands fa-html5 fa-2xl" style="color: #ee8a2c;"></i>&nbsp;&nbsp;&nbsp;
               <i class="fa-brands fa-css3-alt fa-2xl" style="color: #5578ff;"></i>&nbsp;&nbsp;&nbsp; 
               <i class="fa-brands fa-java fa-2xl" style="color: #fc3535;"></i>&nbsp;&nbsp;&nbsp;
