--- a/index.html
+++ b/index.html
@@ -264,6 +264,42 @@
           </div>
         </div>
     </div><!-- End Interests -->
+       <br>
+    <br>
+      <!-- Carousel wrapper -->
+<div id="carouselExampleControls" class="carousel slide text-center carousel-dark rounded border border-primary" data-mdb-ride="carousel" style="padding: 25px; ">
+  <h2 style="text-decoration: underline; ">Testimonial</h2>
+  <br>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="rounded-circle shadow-1-strong mb-4"
+        src="assets/img/bryan_ho.jpg" alt="avatar"
+        style="width: 150px;" />
+      <div class="row d-flex justify-content-center">
+        <div class="col-lg-8">
+          <h5 class="mb-3" style="font-weight: bold;">Brayn Ho</h5>
+          <p>Director</p>
+          <p>Smmile Digital Pte Ltd</p>
+
+          <p class="text-light">
+            <i class="fas fa-quote-left pe-2"></i>
+            The team at SMMILE is impressed and complimentary on the qual
+            ity of your work and attitude. I believe that you will be able to 
+            progress well in your career and I will have no hesitation to work 
+            with you again in the future
+          </p>
+        </div>
+      </div>
+      <ul class="list-unstyled d-flex justify-content-center text-warning mb-0">
+        <li><i class="fas fa-star fa-sm"></i></li>
+        <li><i class="fas fa-star fa-sm"></i></li>
+        <li><i class="fas fa-star fa-sm"></i></li>
+        <li><i class="fas fa-star fa-sm"></i></li>
+        <li><i class="fas fa-star fa-sm"></i></li>
+      </ul>
+    </div>
+</div>
+<!-- Carousel wrapper -->
   </section><!-- End About Section -->
 
  
