--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="rounded-circle shadow-1-strong mb-4"
-        src="../assets/img/bryan_ho.JPG" alt="avatar"
+        src="./assets/img/bryan_ho.jpg" alt="avatar"
         style="width: 150px;" />
       <div class="row d-flex justify-content-center">
         <div class="col-lg-8">
