--- a/index.html
+++ b/index.html
@@ -253,13 +253,13 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <img src="../assets/img/mys.png" width="30" alt="">&nbsp;&nbsp;&nbsp;
+            <img src="./assets/img/mys.png" width="30" alt="">&nbsp;&nbsp;&nbsp;
             <h3>MySQL</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <img src="../assets/img/boot.png" width="31" alt="">&nbsp;&nbsp;&nbsp;
+            <img src="./assets/img/boot.png" width="31" alt="">&nbsp;&nbsp;&nbsp;
             <h3>Spring Boot</h3>
           </div>
         </div>
